[package]
name = "covax"
version = "0.1.0"
authors = ["Ranadeep Biswas <ranadip.bswas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
cli-table = "0.4.6"
env_logger = "0.8.3"
futures = "0.3.15"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.3"
reqwest = { version = "0.11.3", features = ["json", "cookies"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
clap = "3.0.0-beta.2"
